assets/css/beautifuljekyll.css
/* ... */
.center {
  display: block;
  margin: 0 auto;
}

/* Search bar */
#beautifuljekyll-search-overlay {
  font-family: var(--header-font);
  display: none;
  z-index: 999999;
  position: fixed;
  background: rgba(0,0,0,0.9);
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  text-align: center;
  padding: 1rem;
}

#nav-search-exit {
  position: absolute;
  top: 1.5rem;
  cursor: pointer;
  right: 25%;
  margin-right: 2rem;
  color: #555;
  font-size: 2rem;
  line-height: 2rem;
  font-weight: bold;
}
#nav-search-exit:hover {
  color: #000;
}
#nav-search-input {
  text-align: center;
  background: #e7edee;
  margin: auto;
  display: block;
  font-size: 2rem;
  width: 50%;
  transition: width 300ms ease;
  color: #222;
  border-radius: 5rem;
  outline: none;
  border: none;
  padding: 0 3rem;
}

@media (max-width: 1199px) {
  #nav-search-input {
    width: 75%;
  }
  #nav-search-exit {
    right: 12.5%;
  }
}
@media (max-width: 767px) {
  #nav-search-input {
    width: 100%;
  }
  #nav-search-exit {
    right: 0;
  }
}
#nav-search-input:focus {
  background: #f3f8fe;
  box-shadow: 0px 0.15rem 1rem #e7f4ff;
  outline: none;
}

#nav-search-input::placeholder {
  color: #777;
}

#search-results-container {
  list-style: none;
  padding-left: unset;
  margin-top: 1.5rem;
  color: #fff;
  font-size: 1.5rem;
  max-height: calc(100vh - 6.5rem);
  overflow-y: auto;
}
#search-results-container a {
  color: #fff;
  text-decoration: none;
}
#search-results-container a:hover {
  color: #fff;
  text-decoration: underline;
}

#nav-search-icon {
  display: inline-block;
}
#nav-search-text {
  display: none;
}

@media (max-width: 1199px) {
  #nav-search-icon {
    display: none;
  }
  #nav-search-text {
    display: inline-block;
  }
}



/* custom added by Heidi */
details > summary {
  font:
    18px "Open Sans",
    "Calibri",
    sans-serif;
  font-style: italic;
  font-weight: bold;
  color: #ec4801;
  border: none;
}

#box-blue {
  background-color: #364362;
  color: #FFFFFF;
  padding:25px;
  box-shadow: -10px 10px #FEC51D;
  font-family:'Open Sans', sans-serif;
  border-radius: 10px; /* rounded corners */
  margin-bottom: 40px; /* adds space underneath */
}
#box-blue:hover{                                
  transform: translateY(-5px);
}


#box-yellow {
  background-color:#FEC51D;
  color: #364362;
  padding:25px;
  box-shadow: -10px 10px #0CA6D6;
  font-family:'Open Sans', sans-serif;
  border-radius: 10px; /* rounded corners */
}
#box-yellow:hover{
  transform: translateY(-5px);
}

#box-teal {
  background-color: #0CA6D6;
  color: #FFFFFF;
  padding:25px;
  box-shadow: 10px 10px #EC4801;
  font-family:'Open Sans', sans-serif;
  border-radius: 10px; /* rounded corners */
}  
#box-teal:hover{
  transform: translateY(-5px);
}

#box-white {
  background-color: #FFFFFF;
  color: #364362;
  padding:20px;
  font-family:'Open Sans', sans-serif;
  border-radius: 10px; /* rounded corners */
}
#box-white:hover{
  transform: translateY(-5px);
}

#header-yellow {
  border-radius: 15px;
  background: #FEC51D;
  padding: 20px;
}

#header-teal {
  border-radius: 25px;
  background: #0CA6D6;
  padding: 20px;
}

#header-blue {
  border-radius: 15px;
  background: #364362;
  padding: 20px;
}

#header-red {
  border-radius: 15px;
  background: #EC4801;
  padding: 20px;
}



/* making table */
table {
  width: 80%;
  border-collapse: collapse;
  margin-top: 20px;
  margin-left: 20px;
  margin-right: 20px;
  margin-bottom: 20px;
  font-family: 'Open Sans', sans-serif;
}

th, td {
  border: 1px solid #364362;
  padding: 12px;
  text-align: left;
}

th {
  background-color: #364362;
  color: #f5f5f5;
}

tr:nth-child(even) {
  background-color: #0CA6D6;
}

table {
  border-radius: 10px;
  overflow: hidden;
}

